fixed map clip column breaking on Firefox and Chrome

--- a/css/map-clip.css
+++ b/css/map-clip.css
@@ -82,6 +82,8 @@
 		flex-basis: 100%;
 		flex-grow: 1;
 		margin-left: 10%;
+		break-before: always; /* Firefox only */
+		-webkit-column-break-before: always; /* Chrome only */
 	}
 	
 }
